--- a/old/src/browse-unit.html
+++ b/old/src/browse-unit.html
@@ -69,7 +69,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 40px;
         margin-top: 50px;
         width: 97%;
-        padding: 40px;
+        padding-bottom: 40px;
         color: var(--secondaryFontColorCard);
         --background-color:var(--cardBackgroundcolor);
         --disabled-text-color:var(--secondaryFontColorCard);
