--- a/Vocabulous/src/browse-unit.html
+++ b/Vocabulous/src/browse-unit.html
@@ -22,6 +22,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-icons/social-icons.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="browse-unit">
@@ -131,7 +133,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Browse Unit</h1>
-      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
       <paper-search-bar search="{{search}}" loading="[[loading]]"></paper-search-bar>
       <!--<paper-icon-button id="tune" name="tune" icon="image:tune"></paper-icon-button>-->
       <paper-dialog id="filters">
@@ -163,9 +164,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /*<paper-icon-button id="transfer" name="transfer" raised noink></paper-icon-button>*/
     class BrowseUnit extends Polymer.Element {
       static get is() { return 'browse-unit'; }
-      _getReturnButton(){
-        return Polymer.dom(this.root).querySelector("paper-icon-button[name=backicon]");
-      }
       _getPaperDialogFilters(){
         return Polymer.dom(this.root).querySelector("paper-dialog[id=filters]");
       }
