--- a/Vocabulous/src/my-app.html
+++ b/Vocabulous/src/my-app.html
@@ -53,6 +53,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --headlineCard: #212121;
         --secondaryFontColorCard:#777777;
         --hover-color: #f2f2f2;
+        --modeCheckColor: #212121;
         display: block;
       }
 
