--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -171,10 +171,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         margin-left: 35px;
       }
       .buttons{
-        font-size: 0.65em;
+        font-size: 0.75em;
         margin-left: 40px;
-        margin-top: -60px;
-        padding-bottom: 60px;
+        margin-top: -65px;
+        /*padding-bottom: 60px;*/
+        padding: 0px;
+        height: 0%;
       }
       paper-input{
         color:var(--secondaryFontColorCard);
@@ -222,8 +224,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </table>
       </div>
       <div class="buttons">
-          <paper-button style="margin-left: 40px;" name="edit" raised noink>Edit</paper-button>
-          <paper-button name="save" raised noink>Save</paper-button>
+          <paper-button style="margin-left: 40px; height: 30px" name="edit" raised noink>Edit</paper-button>
+          <paper-button style="height: 30px" name="save" raised noink>Save</paper-button>
       </div>
       <paper-dialog id="confirmPassword">
         <h2>Password</h2>
