--- a/Vocabulous/src/practice-overview.html
+++ b/Vocabulous/src/practice-overview.html
@@ -50,6 +50,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         width: 90%;    
         padding: 50px;
         border-radius: 4px;
+        font-size: 1.1em;
       }
       
       .sweep-to-bottom-answer:before{
@@ -69,7 +70,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         text-align: center;
       }
       .sweep-to-bottom-answer:hover:before{
-        height: 125px;
+        height: 100%;
       }
       .sweep-to-bottom-answer:hover:after{
         content:'Dieser Lernmodus ist für asidjasdoaskdok';
