--- a/Vocabulous/src/practice-overview.html
+++ b/Vocabulous/src/practice-overview.html
@@ -51,6 +51,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         padding: 50px;
         border-radius: 4px;
         font-size: 1.1em;
+        font-weight: 500;
+        height: 150px;
       }
       
       .sweep-to-bottom-answer:before{
@@ -73,7 +75,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         height: 100%;
       }
       .sweep-to-bottom-answer:hover:after{
-        content:'Dieser Lernmodus ist für asidjasdoaskdok';
+        content:'Dieser Lernmodus ist für asidjasdoaskdok odjfsjdfsd sdf9sd disfjsdf sdfjs sidfsidf sdfjisd sidfisjdf sdifsidf  sdfd df dsf  s df';
+        font-weight: 300;
+        font-style: italic;
+        font-size: 0.9em;
       }
 
       .sweep-to-bottom-memory:before{
@@ -97,6 +102,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       .sweep-to-bottom-memory:hover:after{
         content:'Dieser Lernmodus ist für asidjasdoaskdok';
+        font-weight: 300;
+        font-style: italic;
+        font-size: 0.9em;
       }
     </style>
 
