--- a/old/src/practiceunit-page.html
+++ b/old/src/practiceunit-page.html
@@ -14,13 +14,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/app-layout/app-layout.html">
 <link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
-<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../bower_components/paper-progress/paper-progress.html">
 <link rel="import" href="../bower_components/time-counter/time-counter.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/vaadin-icons/vaadin-icons.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="shared-styles.html">
 
@@ -154,89 +157,50 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 30px;
-        height: 30px;
+        width: 45px;
+        height: 45px;
         margin-left: -10px;
-        margin-top: -49px;
+        margin-top: -55px;
         position:absolute;
       }
       iron-icon.language{
         color: var(--app-secondary-color);
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
         margin-top: 15px;
         margin-left: 10px;
       }
       iron-icon.next{
         color: var(--app-secondary-color);
-        width: 15px;
-        height: 15px;
+        width: 20px;
+        height: 20px;
         margin-top: -80px;
         margin-left: 80%;
       }
-      #popuplanguage iron-icon.language{
-        display: none;
-      }
-      #popuplanguage{
-        position: absolute;
-        z-index: 1;
-        width: 500px;
-        background-color: rgba(134, 221, 255, 0.562);
-        color:black;
-        padding: 5px 0;
-        margin-top: 4.5%;
-      }
-      #popuplanguage::after{
-        content: "";
-        position: absolute;
-        bottom: 100%;
-        left: 48.5%;
-        margin-top: -4px;
-        border-width: 7px;
-        border-style: solid;
-        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
-      }
-      iron-icon.next:hover #popupnext{
-        display: block;
-      }
-      #popupnext iron-icon.next{
-        display: none;
-      }
-      #popupnext{
-        position: absolute;
-        z-index: 1;
-        width: 500px;
-        background-color: rgba(134, 221, 255, 0.562);
-        color:black;
-        padding: 5px 0;
-        margin-top: -1.5%;
-        margin-left: 59.5%;
-      }
-      #popupnext::after{
-        content: "";
-        position: absolute;
-        bottom: 100%;
-        left: 48.5%;
-        margin-top: -4px;
-        border-width: 7px;
-        border-style: solid;
-        border-color: transparent transparent rgba(134, 221, 255, 0.562) transparent;
-      }
-      iron-icon.next:hover #popupnext{
-        display: block;
+      #infoLanguage, #infoNext{
+        width: 400px;
+        border-radius: 5px;
+        border-color: var(--secondaryFontColorCard);
+        background-color: var(--hover-color);
+        color: var(--secondaryFontColorCard);
       }
 
     </style>
 
     <div class="card">
       <h1>Unit 1</h1> <!--Name der Unit-->
-      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
+      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
       <table>
         <tr>
           <td><h3 class="german">German</h3></td>
           <td><paper-toggle-button noink checked class="language"></paper-toggle-button></td>
           <td> <h3 class="english">English</h3></td>
-          <td><iron-icon icon="vaadin:info-circle-o" class="language"></iron-icon></td>
+          <td><iron-icon icon="icons:info-outline" class="language"></iron-icon></td>
+          <paper-dialog id="infoLanguage">
+            <p>When you select "German" you will have to
+              write German words and when you select "English" you will have to write
+              English words.</p>
+          </paper-dialog>
           <div id="popuplanguage" name="languagePopup" style="display: none">When you select "German" you will have to
               write German words and when you select "English" you will have to write
               English words.</div>
@@ -253,7 +217,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-button hidden="true" class="nextVocab" name="nextVocab" raised noink>Next</paper-button>
           <h2 hidden="true">house</h2> <!--Vokabel das angezeigt wird-->
           <paper-input hidden="true" class="vocab"></paper-input> <!--Vokabel das eingegeben wird-->
-          <iron-icon hidden="true" icon="vaadin:info-circle-o" class="next"></iron-icon>
+          <iron-icon hidden="true" icon="icons:info-outline" class="next"></iron-icon>
+          <paper-dialog id="infoNext">
+            <p>When you press "NEXT" Vocabulous
+              will check your answer. If it is correct the line will turn green,
+              else the line will turn red. You have two tries.
+              When the line turns orange, the correct answer is shown.
+              After a short amount of time you will get the next word.</p>
+          </paper-dialog>
           <div id="popupnext" name="nextPopup" style="display: none">When you press "NEXT" Vocabulous
               will check your answer. If it is correct the line will turn green,
               else the line will turn red. You have two tries.
@@ -341,6 +312,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       _getWrongVocs(){
         return Polymer.dom(this.root).querySelector("input[name=wrongVocs]");
+      }
+      _getPaperDialogLanguage(){
+        return Polymer.dom(this.root).querySelector("paper-dialog[id=infoLanguage]");
+      }
+      _getPaperDialogNext(){
+        return Polymer.dom(this.root).querySelector("paper-dialog[id=infoNext]");
       }
     }
     window.customElements.define(PracticeUnitPage.is, PracticeUnitPage);
