--- a/old/src/upload-unit.html
+++ b/old/src/upload-unit.html
@@ -17,6 +17,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-content.html">
 <link rel="import" href="../bower_components/d2l-dropdown/d2l-dropdown-menu.html">
 <link rel="import" href="../bower_components/d2l-menu/d2l-menu-item.html">
+<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="upload-unit">
@@ -36,10 +37,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
       paper-icon-button.back{
         font-size: 0.65em;
-        width: 30px;
-        height: 30px;
+        width: 45px;
+        height: 45px;
         margin-left: -10px;
-        margin-top: -49px;
+        margin-top: -55px;
         position:absolute;
       }
       p{
@@ -49,7 +50,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Upload Unit</h1>
-      <paper-icon-button name="backicon" icon="vaadin:chevron-left" class="back"></paper-icon-button>
+      <paper-icon-button name="backicon" icon="hardware:keyboard-arrow-left" class="back"></paper-icon-button>
       <p>Units können mit Hilfe einer CSV-Datei, die per Drag and Drop in ein vorhandes Feld gezogen
         in die eigene Unit-Sammlung übernommen werden.
       </p>
