--- a/old/src/settings-view.html
+++ b/old/src/settings-view.html
@@ -73,7 +73,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-toggle-button.default{
@@ -94,7 +95,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 80px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       h2.ownTheme{
@@ -108,28 +110,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 400;
         margin-left: 40px;
         margin-top: 20px;
-        font-size: 15px;
+        font-size: 1.2em;
         color:var(--app-secondary-color);
       }
       h3.headerBackground{
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       h3.card{
         font-weight: 400;
         margin-left: 40px;
         margin-top: 20px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       h3.headerColor{
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.headerBackground{
@@ -148,14 +153,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 400;
         margin-left: 40px;
         margin-top: 20px;
-        font-size: 15px;
+        font-size: 1.2em;
         color:var(--app-secondary-color);
       }
       h3.menuBackground{
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.menuBackground{
@@ -168,7 +174,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.menuColor{
@@ -180,7 +187,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       h3.menuNavigationColor{
         font-weight: 300;
         margin-left: 200px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.menuNavigationColor{
@@ -193,7 +201,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.menuNavigationFontColor{
@@ -206,14 +215,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 400;
         margin-left: 40px;
         margin-top: 20px;
-        font-size: 15px;
+        font-size: 1.2em;
         color:var(--app-secondary-color);
       }
       h3.displayAreaBackground{
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.displayAreaBackground{
@@ -226,7 +236,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.cardBackground{
@@ -239,7 +250,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 40px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.headlineColor{
@@ -252,7 +264,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         font-weight: 300;
         margin-left: 200px;
         margin-top: 0px;
-        font-size: 15px;
+        font-size: 1em;
+        font-weight: 400;
         color:var(--app-secondary-color);
       }
       paper-swatch-picker.cardFontColor{
@@ -262,7 +275,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-swatch-picker-color-size: 10px;
       }
       .buttons{
-        font-size: 0.65em;
+        font-size: 0.75em;
         margin-left: 40px;
       }
       paper-dropdown-menu{
