--- a/old/src/statistics-view.html
+++ b/old/src/statistics-view.html
@@ -72,11 +72,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       </paper-tabs>
       <google-chart
         type='column'
-        cols='[{"label":"Name", "type":"string"}, {"label":"Amount", "type":"number"}]'>
+        options='{"title": "Distribution of days in 2001Q1"}'
+        cols='[{"label":"Month", "type":"string"}, {"label":"Days", "type":"number"}]'
+        rows='[["Jan", 31],["Feb", 28],["Mar", 31]]'>
       </google-chart>
       <google-chart
-        type='donut'
-        cols='[{"label":"Name", "type":"string"}, {"label":"Amount", "type":"number"}]'>
+        type='line'
+        options='{"title": "Distribution of days in 2001Q1"}'
+        cols='[{"label":"Month", "type":"string"}, {"label":"Days", "type":"number"}]'
+        rows='[["Jan", 31],["Feb", 28],["Mar", 31]]'>
+      </google-chart>
+      <google-chart
+        type='pie'
+        options='{"title": "Distribution of days in 2001Q1"}'
+        cols='[{"label":"Month", "type":"string"}, {"label":"Days", "type":"number"}]'
+        rows='[["Jan", 31],["Feb", 28],["Mar", 31]]'>
       </google-chart>
     </div>
   </template>
