--- a/Vocabulous/src/account-view.html
+++ b/Vocabulous/src/account-view.html
@@ -87,7 +87,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -100,7 +101,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -112,7 +114,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -130,7 +133,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -145,7 +149,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -158,7 +163,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         --paper-input-container-underline-disabled: {
             opacity: 1;
             border-style:solid;
-            border-width:0.1px;
+            border-width: 1px;
+            border-color: var(--headlineCard);
           };
         --paper-input-container-disabled: {
             opacity: 1;
@@ -192,7 +198,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         background-color: var(--hover-color);
         color: var(--secondaryFontColorCard);
       }
-
+      #save{
+        margin-left: 0px;
+        margin-top: 10px;
+        color: var(--headlineCard);
+      }
+      paper-input.input{
+        width: 100%;
+        color:var(--secondaryFontColorCard);
+        --paper-input-container-underline: {
+          display: none;
+        };
+        --paper-input-container-underline-focus: {
+          display: none;
+        };
+        --paper-input-container-underline-disabled: {
+          display: none;
+        };
+      }
     </style>
       <div class="card">
           <h1>Account</h1>
@@ -231,7 +254,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <h2>Password</h2>
         <div>
             <paper-input class="input" name="newPassword" label="Enter new Password again" error-message="Wrong input! Please try again" type="password"></paper-input>
-            <paper-button id="save" name="changePassword" raised noink>Change Password</paper-button>
+            <paper-button id="save" name="changePassword">Change Password</paper-button>
         </div>
       </paper-dialog>
   </template>
